Move VideoReference.mp4 and update video path
Relocated VideoReference.mp4 from the Graphics directory to the root of the alpha folder and updated the video source path in index.html accordingly.

--- a/alpha/index.html
+++ b/alpha/index.html
@@ -152,7 +152,7 @@
     </section>
     <section class="images">
         <h1>Video Reference</h1>
-        <video src="Graphics/VideoReference.mp4" controls></video>
+        <video src="VideoReference.mp4" controls></video>
     </section>
 
     <footer>
