Update wishlist dropdown menu documentation
Revised the index.html documentation to clarify the wishlist dropdown menu behavior, consolidating menu options and adding details about hover states. Updated VideoReference.mp4 to reflect these UI changes.

--- a/alpha/index.html
+++ b/alpha/index.html
@@ -48,11 +48,7 @@
                         <ul>
                             <li>Update the user's wishlist with the newly added game</li>
                             <li>Button changes to show a button with a checkbox with "On Wishlist"</li>
-                            <li>Changes to have two dropdown options on the side of the button</li>
-                                <ul>
-                                    <li>Manage your wishlist</li>
-                                    <li>Remove from your wishlist</li>
-                                </ul>
+                            <li>Changes to have a dropdown menu on the side</li>
                         </ul>
                     </li>
                 </ul>
@@ -61,6 +57,21 @@
                         <ul>
                             <li>Update the user's wishlist and remove the game</li>
                             <li>Button changes back to default</li>
+                        </ul>
+                    </li>
+                </ul>
+                <p>Dropdown Menu Options</p>
+                <ul>
+                    <li>Hover On:
+                        <ul>
+                            <li>Changes color to a lighter shade of grey</li>
+                        </ul>
+                    </li>
+                </ul>
+                <ul>
+                    <li>Hover Off:
+                        <ul>
+                            <li>Changes color back to original</li>
                         </ul>
                     </li>
                 </ul>
@@ -88,11 +99,7 @@
                     <li>Click
                         <ul>
                             <li>Button changes to show a button with a checkbox with "On Wishlist"</li>
-                            <li>Changes to have two dropdown options on the side of the button</li>
-                                <ul>
-                                    <li>Manage your wishlist</li>
-                                    <li>Remove from your wishlist</li>
-                                </ul>
+                            <li>Changes to have a dropdown menu on the side</li>
                         </ul>
                     </li>
                 </ul>
@@ -100,6 +107,21 @@
                     <li>Click Again
                         <ul>
                             <li>Button changes back to default</li>
+                        </ul>
+                    </li>
+                </ul>
+                <p>Dropdown Menu Options</p>
+                <ul>
+                    <li>Hover On:
+                        <ul>
+                            <li>Changes color to a lighter shade of grey</li>
+                        </ul>
+                    </li>
+                </ul>
+                <ul>
+                    <li>Hover Off:
+                        <ul>
+                            <li>Changes color back to original</li>
                         </ul>
                     </li>
                 </ul>
@@ -148,6 +170,27 @@
                             <li>Text box below the wishlist button disappears</li>
                         </ul>
                     </li>
+                </ul>
+                <p>Dropdown Menu</p>
+                    <ul>
+                        <li>Hover On:
+                            <ul>
+                                <li>Two options appear</li>
+                                    <ul>
+                                        <li>Manage your wishlist</li>
+                                        <li>Remove from your wishlist</li>
+                                    </ul>
+                            </ul>
+                        </li>
+                    </ul>
+                    <ul>
+                        <li>Hover Off:
+                            <ul>
+                                <li>Mange your wishlist disappears</li>
+                                <li>Remove from your wishlist disappears</li>
+                            </ul>
+                        </li>
+                    </ul>
             </div>
     </section>
     <section class="images">
