--- a/final/index.html
+++ b/final/index.html
@@ -32,7 +32,7 @@
                     </button>
                     <button class="wishlist-btn on-wishlist hidden" id="wishlist-remove-btn">
                         <span class="label">
-                            <img src="https://store.fastly.steamstatic.com/public/images/v6/ico/ico_selected.png" alt="steam checkmark">On wishlist</span>
+                            <img class="checkmark" src="https://store.fastly.steamstatic.com/public/images/v6/ico/ico_selected.png" alt="steam checkmark">On wishlist</span>
                     </button>
 
                 </div>
@@ -42,6 +42,11 @@
                     <div class="dropdown-menu" id="dropdown-menu">
                         <button class="dropdown-menu-item" id="manage-wishlist">Manage your wishlist</button>
                         <button class="dropdown-menu-item" id="remove-from-wishlist">Remove from your wishlist</button>
+
+                        <div class="dropdown-note-container">
+                            <input type="text" class="dropdown-note-input" placeholder="Add a note...">
+                        </div>
+
                     </div>
                 </div>
 
@@ -61,22 +66,32 @@
                     <li>Click</li>
                     <li>Click Again</li>
                 </ul>
-                <p>Dropdown Arrow</p>
+                <p><strong>Dropdown Arrow</strong></p>
                 <ul>
                     <li>Hover On</li>
                     <li>Hover Off</li>
                 </ul>
-                <p>Dropdown Links</p>
+                <p><strong>Dropdown Links</strong></p>
                 <ul>
                     <li>Hover On</li>
                     <li>Hover Off</li>
+                </ul>
+                <p><strong>Checkmark</strong></p>
+                <ul>
+                    <li>Hover On</li>
+                    <li>Hover Off</li>
+                </ul>
+                <p><strong>Add a note</strong></p>
+                <ul>
+                    <li>Click</li>
+                    <li>Key Press</li>
                 </ul>
             </div>
             <div>
                 <h1 class="Rules">
                     Rules:
                 </h1>
-                <p>Wishlist Button</p>
+                <p><strong>Wishlist Button</strong></p>
                 <ul>
                     <li>Hover On:
                         <ul>
@@ -141,6 +156,36 @@
                     <li>Hover Off:
                         <ul>
                             <li>Color fades back to original over 0.2s</li>
+                        </ul>
+                    </li>
+                </ul>
+                <p><strong>Checkmark</strong></p>
+                <ul>
+                    <li>Hover:
+                        <ul>
+                            <li>Scale increases slightly (1.2)</li>
+                        </ul>
+                    </li>
+                </ul>
+                <ul>
+                    <li>Hover Off:
+                        <ul>
+                            <li>Scale returns to normal (1)</li>
+                        </ul>
+                    </li>
+                </ul>
+                <p><strong>Add a note</strong></p>
+                <ul>
+                    <li>Click:
+                        <ul>
+                            <li>Focuses on the note input field</li>
+                        </ul>
+                    </li>
+                </ul>
+                <ul>
+                    <li>Key Press:
+                        <ul>
+                            <li>Updates the note content</li>
                         </ul>
                     </li>
                 </ul>
@@ -212,6 +257,36 @@
                     <li>Hover Off:
                         <ul>
                             <li>Color fades back to original over 0.2s</li>
+                        </ul>
+                    </li>
+                </ul>
+                <p><strong>Checkmark</strong></p>
+                <ul>
+                    <li>Hover:
+                        <ul>
+                            <li>Scale increases slightly (1.2)</li>
+                        </ul>
+                    </li>
+                </ul>
+                <ul>
+                    <li>Hover Off:
+                        <ul>
+                            <li>Scale returns to normal (1)</li>
+                        </ul>
+                    </li>
+                </ul>
+                <p><strong>Add a note</strong></p>
+                <ul>
+                    <li>Click:
+                        <ul>
+                            <li>Focuses on the note input field</li>
+                        </ul>
+                    </li>
+                </ul>
+                <ul>
+                    <li>Key Press:
+                        <ul>
+                            <li>Updates the note content</li>
                         </ul>
                     </li>
                 </ul>
